--- a/app/src/main/res/layout/register_child.xml
+++ b/app/src/main/res/layout/register_child.xml
@@ -1,105 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="vertical"
-        android:id="@+id/loginBannerLayout"
-        android:background="@color/colorPrimary"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ajout d'un enfant"
-            android:textColor="@color/white"
-            android:textSize="35sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_below="@+id/loginBannerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="50dp"
-        android:gravity="center_horizontal">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/firstName"
-            android:layout_height="wrap_content"
-            android:layout_width="@dimen/input_size"
-            android:drawableLeft="@drawable/icone4"
-            android:drawableStart="@drawable/icone4"
-            android:hint="Nom"
-            style="@style/EditText"
-            android:layout_marginBottom="10dp"/>
-
-      <android.support.design.widget.TextInputEditText
-          android:id="@+id/lastName"
-            android:layout_height="wrap_content"
-            android:layout_width="@dimen/input_size"
-            android:drawableLeft="@drawable/icone4"
-            android:drawableStart="@drawable/icone4"
-            android:hint="Prénom"
-            style="@style/EditText"
-            android:layout_marginBottom="10dp"/>
-
-        <AutoCompleteTextView
-            android:id="@+id/school"
-            android:layout_height="wrap_content"
-            android:layout_width="@dimen/input_size"
-            android:drawableLeft="@drawable/icone2"
-            android:drawableStart="@drawable/icone2"
-            android:hint="Ecole"
-            style="@style/EditText"
-            android:layout_marginBottom="10dp"/>
-        <AutoCompleteTextView
-            android:id="@+id/idclassroom"
-            android:layout_height="wrap_content"
-            android:layout_width="@dimen/input_size"
-            android:drawableLeft="@drawable/icone2"
-            android:drawableStart="@drawable/icone2"
-            android:hint="Classe"
-            style="@style/EditText"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:minHeight="60dp"
-            android:gravity="center_vertical"
-            android:paddingRight="@dimen/padding_normal"
-            android:paddingLeft="@dimen/padding_normal"
-            android:text="Nous verifirons ces informations afin de valider votre inscription en moin de  24h"
-            android:background="@color/background"
-            android:textSize="@dimen/text_medium_size"
-            android:textColor="@color/colorSecondary_text"/>
-
-        <Button
-            android:id="@+id/btnRegisterChild"
-            android:text="@string/registerBtn"
-            style="@style/BtnBackgroungBig"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="12dp"/>
-
-
-    </LinearLayout>
-
-    <CheckBox
-        android:id="@+id/checkBox"
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Recevoir les notifications"
-        android:textColor="@color/colorSecondary_text"
-        android:layout_below="@+id/loginBannerLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:orientation="vertical"
+                android:id="@+id/loginBannerLayout"
+                android:background="@color/colorPrimary"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ajout d'un enfant"
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_below="@+id/loginBannerLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="50dp"
+                android:gravity="center_horizontal">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txtFirstName"
+                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/input_size"
+                    android:drawableLeft="@drawable/icone4"
+                    android:drawableStart="@drawable/icone4"
+                    android:hint="Nom"
+                    style="@style/EditText"
+                    android:layout_marginBottom="10dp"/>
+
+              <android.support.design.widget.TextInputEditText
+                  android:id="@+id/txtLastName"
+                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/input_size"
+                    android:drawableLeft="@drawable/icone4"
+                    android:drawableStart="@drawable/icone4"
+                    android:hint="Prénom"
+                    style="@style/EditText"
+                    android:layout_marginBottom="10dp"/>
+
+                <AutoCompleteTextView
+                    android:id="@+id/txtSchool"
+                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/input_size"
+                    android:drawableLeft="@drawable/icone2"
+                    android:drawableStart="@drawable/icone2"
+                    android:hint="Ecole"
+                    style="@style/EditText"
+                    android:layout_marginBottom="10dp"/>
+                <AutoCompleteTextView
+                    android:id="@+id/txtClassroom"
+                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/input_size"
+                    android:drawableLeft="@drawable/icone2"
+                    android:drawableStart="@drawable/icone2"
+                    android:hint="Classe"
+                    style="@style/EditText"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:minHeight="60dp"
+                    android:gravity="center_vertical"
+                    android:paddingRight="@dimen/padding_normal"
+                    android:paddingLeft="@dimen/padding_normal"
+                    android:text="Nous verifirons ces informations afin de valider votre inscription en moin de  24h"
+                    android:background="@color/background"
+                    android:textSize="@dimen/text_medium_size"
+                    android:textColor="@color/colorSecondary_text"/>
+
+                <Button
+                    android:id="@+id/btnRegisterChild"
+                    android:text="@string/registerBtn"
+                    style="@style/BtnBackgroungBig"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="12dp"/>
+
+
+            </LinearLayout>
+
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recevoir les notifications"
+                android:textColor="@color/colorSecondary_text"
+                android:layout_below="@+id/loginBannerLayout"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:checked="true"/>
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
