--- a/app/src/main/res/layout/activity_children.xml
+++ b/app/src/main/res/layout/activity_children.xml
@@ -43,6 +43,7 @@
             android:gravity="end|center_vertical"
             android:layout_weight="0.1">
             <Button
+                android:id="@+id/btnChildrenAdd"
                 style="@style/BtnBackgroungNormal"
                 android:text="Ajouter"
                 android:layout_marginRight="20dp"/>
