--- a/app/src/main/res/layout/dialog_add_infos_parent.xml
+++ b/app/src/main/res/layout/dialog_add_infos_parent.xml
@@ -6,6 +6,16 @@
         android:padding="15dip"
         android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/authInfo"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="@dimen/text_normal_size"
+        android:textColor="@color/colorPrimary_text"
+        android:text="souklou"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"/>
+
     <android.support.design.widget.TextInputEditText
         android:id="@+id/lastName"
         android:layout_height="wrap_content"
@@ -15,10 +25,18 @@
         android:layout_marginBottom="10dp"/>
 
     <android.support.design.widget.TextInputEditText
-        android:id="@+id/firstName"
+    android:id="@+id/firstName"
+    android:layout_height="wrap_content"
+    android:layout_width="@dimen/input_size"
+    android:hint="Prénom"
+    style="@style/EditText"
+    android:layout_marginBottom="10dp"/>
+
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/phoneNumber"
         android:layout_height="wrap_content"
         android:layout_width="@dimen/input_size"
-        android:hint="Prénom"
+        android:hint="Numero de téléphone"
         style="@style/EditText"
         android:layout_marginBottom="10dp"/>
 
