--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,8 @@
              android:layout_centerHorizontal="true"
              android:layout_marginTop="20dp"
              android:scaleType="centerInside"
-             android:focusable="true"/>
+             android:focusable="true"
+            />
 
          <TextView
              android:layout_width="wrap_content"
