--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="divider2">#e6e3e3</color>
     <color name="background">#d7d7d7</color>
     <color name="googleRed">#ca2d14</color>
+    <color name="transparent">#bb223021</color>
 
     <color name="bg_very_low">#FFFC9393</color>
     <color name="bg_low">#f7a6a6</color>
