--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,8 +53,7 @@
                 android:text="@string/connectBtn"
                 style="@style/BtnBackgroungBig"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/selector_rounded_blue_green" />
+                android:layout_marginBottom="12dp"/>
          </LinearLayout>
 
          <LinearLayout
