--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
              android:layout_centerHorizontal="true"
              android:layout_marginTop="20dp"
              android:scaleType="centerInside"
-             android:focusable="true"
+             android:focusableInTouchMode="true"
             />
 
          <TextView
