--- a/app/src/main/res/layout/dialog_add_infos_parent.xml
+++ b/app/src/main/res/layout/dialog_add_infos_parent.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="15dip"
-        android:orientation="vertical">
+        android:orientation="vertical"
+    android:id="@+id/linearDialogInfoParent">
 
     <TextView
         android:id="@+id/authInfo"
@@ -40,22 +41,23 @@
         style="@style/EditText"
         android:layout_marginBottom="10dp"/>
 
-    <android.support.design.widget.TextInputEditText
+    <AutoCompleteTextView
         android:id="@+id/area"
         android:layout_height="wrap_content"
         android:layout_width="@dimen/input_size"
         android:hint="Quartier"
         style="@style/EditText"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:completionThreshold="1"/>
 
     <Button
         android:id="@+id/btnDiaInfoPar"
         android:layout_width="100dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         style="@style/BtnBackgroungNormal"
         android:text="Valider"
         android:layout_gravity="end"
         android:layout_marginRight="@dimen/margin_normal"
-        android:focusableInTouchMode="true"/>
+        android:focusableInTouchMode="true" />
 
     </LinearLayout>
