--- a/app/src/main/res/layout/activity_children.xml
+++ b/app/src/main/res/layout/activity_children.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbarPrincipal"
             android:layout_width="match_parent"
@@ -23,12 +22,14 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
+
     </android.support.design.widget.AppBarLayout>
 
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/relativeChildren"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
