--- a/app/src/main/res/layout/child_row.xml
+++ b/app/src/main/res/layout/child_row.xml
@@ -6,14 +6,24 @@
     android:layout_marginRight="@dimen/margin_normal"
     android:layout_marginTop="@dimen/margin_normal">
 
-<de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:src="@drawable/ic_stars_black_24dp"
+        android:clickable="true"
+        android:layout_gravity="left"
+        android:layout_marginLeft="@dimen/margin_normal"
+        android:layout_marginTop="@dimen/margin_normal" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="@dimen/margin_normal"
     android:id="@+id/profile_image"
     android:layout_width="96dp"
     android:layout_height="96dp"
     app:civ_border_width="1dp"
-    android:src="@drawable/person_green_24dp"
+    android:src="@mipmap/user"
     app:civ_border_color="@color/background"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"/>
